[package]
name = "ta"
version = "0.1.2"
authors = ["Sergey Potapov <blake131313@gmail.com>"]
edition = "2018"
description = "Technical analysis library. Implements number of indicators: EMA, SMA, RSI, MACD, Stochastic, etc."
keywords = ["technical-analysis", "financial", "ema", "indicators", "trading"]
license = "MIT"
repository = "https://github.com/greyblake/ta-rs"
homepage = "https://github.com/greyblake/ta-rs"
documentation = "https://docs.rs/ta"
readme = "README.md"
categories = ["science", "algorithms"]
include = [
    "src/**/*",
    "Cargo.toml",
    "README.md"
]

[badges]
travis-ci = { repository = "greyblake/ta-rs", branch = "master" }

[dependencies]
error-chain = "0.11"

[dev-dependencies]
assert_approx_eq = "1.0.0"
csv = "0.15.0"
