[package]
name = "ta"
version = "0.4.0"
authors = ["Sergey Potapov <blake131313@gmail.com>"]
edition = "2018"
description = "Technical analysis library. Implements number of indicators: EMA, SMA, RSI, MACD, Stochastic, etc."
keywords = ["technical-analysis", "financial", "ema", "indicators", "trading"]
license = "MIT"
repository = "https://github.com/greyblake/ta-rs"
homepage = "https://github.com/greyblake/ta-rs"
documentation = "https://docs.rs/ta"
readme = "README.md"
categories = ["science", "algorithms"]
include = [
    "src/**/*",
    "Cargo.toml",
    "README.md"
]

[badges]
travis-ci = { repository = "greyblake/ta-rs", branch = "master" }

[dependencies]
serde = { version = "1.0", features = ["derive"], optional = true}

[dev-dependencies]
assert_approx_eq = "1.0.0"
csv = "1.1.0"
bencher = "0.1.5"
rand = "0.6.5"
bincode = "1.3.1"

[[bench]]
name = "indicators"
path = "benches/indicators.rs"
harness = false

[[example]]
name = "ema_serde"
path = "examples/ema_serde.rs"
required-features = ["serde"]
